src/objects/APTS_Stage_Local_Hierarchy__c.object
<CustomObject>
    <description>Stage Local Hierarchy</description>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <label>Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Level1_Code__c</fullName>
        <description>Level 1 Code</description>
        <label>Level 1 Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Level1_Name__c</fullName>
        <description>Level 1 Name</description>
        <inlineHelpText>Level 1 Name</inlineHelpText>
        <label>Level 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Level2_Code__c</fullName>
        <description>Level 2 Code</description>
        <label>Level 2 Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Level2_Name__c</fullName>
        <description>Level 2 Name</description>
        <inlineHelpText>Level 2 Name</inlineHelpText>
        <label>Level 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Level3_Code__c</fullName>
        <description>Level 3 Code</description>
        <label>Level 3 Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Level3_Name__c</fullName>
        <description>Level 3 Name</description>
        <inlineHelpText>Level 3 Name</inlineHelpText>
        <label>Level 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Product_Hierarchy_Code__c</fullName>
        <description>Local Product Hierarchy Code</description>
        <label>Local Product Hierarchy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stage Local Hierarchy</relationshipLabel>
        <relationshipName>Stage_Local_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Record_Type__c</fullName>
        <description>Product Record Type</description>
        <externalId>true</externalId>
        <label>Product Record Type</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_RecordType__c</fullName>
        <description>RecordType</description>
        <label>RecordType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <label>Row Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage Local Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APTS_Local_Product_Hierarchy_Code__c</columns>
        <columns>APTS_Level1_Code__c</columns>
        <columns>APTS_Level1_Name__c</columns>
        <columns>APTS_Level2_Code__c</columns>
        <columns>APTS_Level2_Name__c</columns>
        <columns>APTS_Level3_Code__c</columns>
        <columns>APTS_Level3_Name__c</columns>
        <columns>APTS_Level4_Code__c</columns>
        <columns>APTS_Level4_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LH-{00000}</displayFormat>
        <label>Local Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Local Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>